# subsurface-scattering

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  SubsurfaceScattering.sln
SubsurfaceScattering/: SubsurfaceScattering.vcxproj  SubsurfaceScattering.vcxproj.filters  algebra.cpp  algebra.h  axes_fragment_shader.glsl  axes_vertex_shader.glsl  bezier_cube.h  bezier_patch_tess_eval_shader.glsl  box.h  buffer.h  camera.cpp  camera.h  deformed_mesh.h  depth_map_fragment_shader.glsl  depth_map_vertex_shader.glsl  diffuse_pass_fragment.glsl  diffuse_pass_vertex.glsl  dockspace.h  dummy_vertex_shader.glsl  exception.h  frame_buffer.h  fullscreen_window.cpp  fullscreen_window.h  generic_vector.h  gl_application.cpp  gl_application.h  imgui.ini  imgui_guards.h  light.h  main.cpp  mesh.h  mesh_generator.cpp  mesh_generator.h  patch_tess_control_shader.glsl  phong_deformed_vertex_shader.glsl  phong_fragment_shader.glsl  phong_translucent_fragment_shader.glsl  phong_vertex_shader.glsl  quad_vertex_shader.glsl  quaternion.h  (+27 more)
glad/: glad.c  glad.h
imgui/: imgui_impl_opengl3.cpp
